<resources>
    <string name="app_name">Showcase</string>
    <string name="swipe_refresh_msg">Retrieving latest data</string>
    <string name="retry_msg">Request failed. Pull to refresh</string>
    <string name="loading_msg">Loading…</string>
    <string name="detail_project_id">Project ID</string>
    <string name="detail_student_id">Student ID</string>
    <string name="detail_title">Title</string>
    <string name="detail_project_title">Project Title</string>
    <string name="detail_desc">Description</string>
    <string name="detail_year">Year</string>
    <string name="detail_first_name">First Name</string>
    <string name="detail_Second_name">Second Name</string>
    <string name="detail_photo">Photo</string>
    <string name="detail_poster">Poster</string>
    <string name="detail_thumbnail">Thumbnail</string>
    <string name="detail_field">loading…</string>
    <string name="delete_button">Delete</string>
    <string name="update_button">Update</string>
    <string name="delete_confirm_message">Confirm delete this project?</string>
    <string name="add_url">Add URL</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="success">Success</string>
    <string name="uploading">Image Uploading</string>
    <string name="new_submission">New project submission</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="permission_denied">Permission Denied. Check in Setting</string>
    <string name="channel_name">Showcase</string>
    <string name="channel_description">Image uploaded</string>
    <string name="na">n/a</string>
    <string name="action_settings">Settings</string>
    <string name="action_notification">Upload Notification</string>
</resources>