<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="16dp"
    tools:context=".ProjectDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/null_image" />

        <ImageButton
            android:id="@+id/thumbnailUpdate"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_edit_black_24"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/thumbnailSubmit"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/button_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thumbnail"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/updateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/update_button" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red_delete"
                android:text="@string/delete_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_edit_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thumbnail"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit"
                android:visibility="invisible" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/cancel"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/projectId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_section"
            android:layout_marginTop="16dp"
            android:text="@string/detail_project_id"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/projectIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_section"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/detail_field" />

        <TextView
            android:id="@+id/studentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projectId"
            android:layout_marginTop="16dp"
            android:text="@string/detail_student_id"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/studentIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projectIdText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="26.5dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/detail_field" />

        <EditText
            android:id="@+id/studentIdUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projectIdText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:inputType="number"
            android:text="@string/detail_field"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/studentId"
            android:layout_marginTop="16dp"
            android:text="@string/detail_year"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/yearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/studentIdText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="26.5dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:inputType="number"
            android:text="@string/detail_field" />

        <EditText
            android:id="@+id/yearUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studentIdText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:inputType="number"
            android:text="@string/detail_field"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/year"
            android:layout_marginTop="16dp"
            android:text="@string/detail_poster"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/posterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yearText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="26.5dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:inputType="number"
            android:text="@string/detail_field" />

        <ImageButton
            android:id="@+id/posterUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yearText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_edit_black_24"
            android:text="@string/detail_field"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/posterSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yearText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="#00000000"
            android:text="@string/detail_field"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/posterImg"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_below="@id/poster"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/posterImg"
            android:layout_marginTop="16dp"
            android:text="@string/detail_title"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="16dp"
            android:maxLines="3"
            android:text="@string/detail_field" />

        <EditText
            android:id="@+id/titleUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:text="@string/detail_field"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleText"
            android:layout_marginTop="32dp"
            android:text="@string/detail_desc"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:maxLines="6"
            android:text="@string/detail_field" />

        <EditText
            android:id="@+id/descUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:text="@string/detail_field"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descText"
            android:layout_marginTop="80dp"
            android:text="@string/detail_first_name"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/first_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="86dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/detail_field" />

        <EditText
            android:id="@+id/first_name_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="8dp"
            android:inputType="text"
            android:text="@string/detail_field"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name"
            android:layout_marginTop="16dp"
            android:text="@string/detail_Second_name"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/second_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/detail_field" />

        <EditText
            android:id="@+id/second_name_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:inputType="text"
            android:text="@string/detail_field"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/second_name"
            android:layout_marginTop="16dp"
            android:text="@string/detail_photo"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photoBitmap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@null" />

        <ImageButton
            android:id="@+id/photoAddButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_baseline_add_photo_alternate_128"
            android:visibility="invisible" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>